tests/NormalTests/paczka1/fuzzy1/44384662.err
Error in line 7: gCmPG5enUfx A86 53,0
Error in line 3: cYPt1mDCJ5Z A54 24,4
Error in line 25: qAV A405 119,9
Error in line 29: A9kLv2lso A86 79,3
